--- a/css/thebraingamelab.css
+++ b/css/thebraingamelab.css
@@ -15,13 +15,48 @@ p {
     padding: 0px;
 }
 
-button {
-    background-color: blue;
-    border: 0px;
+em.lead {
+    font-weight: bold;
+    font-style: normal;
+}
+
+input[type="text"] {
+    padding: 0.3em 0.1em;
+    font-family: 'Overpass', sans-serif;
+    vertical-align: middle;
+    cursor: text;
+}
+
+button, .btn {
+    background-color: rgb(0,0,255);
+    vertical-align: middle;
+    border: 1px rgb(0,0,255);
     padding: 0.3em 1.2em;
     box-sizing: border-box;
     color: white;
     text-transform: uppercase;
-    
+    cursor: pointer;
     font-family: 'Overpass', sans-serif;
+    text-decoration: none;
+    font-size: 1em;
+}
+
+button:hover, .btn:hover {
+    background-color: rgb(96,96,255);
+    border: 1px rgb(96,96,255);
+}
+
+.game-title {
+    color: rgb(0,0,255);
+}
+
+.game {
+    max-width: 720px;
+    height: 480px;
+    border: 1px solid #999;
+}
+
+.game-nav {
+    display: block;
+    margin-top: 25px;
 }
