--- a/css/thebraingamelab.css
+++ b/css/thebraingamelab.css
@@ -2,6 +2,7 @@
 
 html {
     font-family: 'Overpass', sans-serif;
+    text-size-adjust: none;
 }
 
 body { 
@@ -11,19 +12,42 @@ body {
 }
 
 p { 
-    margin: 1em 0em;
+    margin: 0em 0em 1em 0em;
     padding: 0px;
-    font-size: 18px;
+    font-size: 14px;
+    line-height: 1.25em;
+}
+
+#signup span {
+    font-size: 14px;
     line-height: 1.25em;
 }
 
 #logo{
-    width: 25%;
-    float: left;
-    margin-right: 1em;
+    width: 100%;
+    display: block;
     margin-bottom: .5em;
+    padding-bottom: 32px;
     margin-top: 0;
     margin-left: 0;
+}
+
+@media screen and (min-width: 480px) {
+    #logo{
+        width: 25%;
+        float: left;
+        margin-right: 1em;
+        margin-bottom: .5em;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-left: 0;
+    }
+    p { 
+        font-size: 18px; 
+    }
+    #signup span {
+        font-size: 18px;
+    }
 }
 
 em.lead {
